[package]
name = "query-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "43.0.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
rustyline = "13.0"
colored = "2" 

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
