[package]
name = "query-fuse"
version = "0.1.0"
edition = "2021"
description = "An interactive SQL query engine for local columnar files (Parquet, Arrow, Feather)"
license = "MIT"
repository = "https://github.com/MantissaMr/query-fuse"
keywords = ["sql", "parquet", "arrow", "datafusion", "cli"]
categories = ["command-line-utilities", "database", "development-tools"]

[dependencies]
datafusion = "43.0.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
rustyline = "13.0"
colored = "2" 

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
